After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 654446 - GUPnPRootDevice:constructed should not return NULL on error
GUPnPRootDevice:constructed should not return NULL on error
Status: RESOLVED FIXED
Product: GUPnP
Classification: Other
Component: gupnp
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GUPnP Maintainers
GUPnP Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-07-12 09:36 UTC by Jens Georg
Modified: 2016-10-15 20:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Make GUPnPRootDevice implement GInitable (15.27 KB, patch)
2011-07-30 11:55 UTC, Jens Georg
none Details | Review

Description Jens Georg 2011-07-12 09:36:23 UTC
because:
a) It leaks the half-constructed object on error
b) Most code out there assumes g_object_new never returns NULL.

Most likely it should be GInitable as well.
Comment 1 Jens Georg 2011-07-30 11:55:59 UTC
Created attachment 192904 [details] [review]
Make GUPnPRootDevice implement GInitable
Comment 2 Jens Georg 2016-10-15 20:23:09 UTC
This problem has been fixed in the unstable development version. The fix will be available in the next major software release. You may need to upgrade your Linux distribution to obtain that newer version.