Make GUPnPRootDevice implement GInitable

https://bugzilla.gnome.org/show_bug.cgi?id=654446